tests/should-fail/rawcodes/rawcodelit-3.j
globals	
    integer g = 'ab\\c'
endglobals